syntax = "proto2";

import "google/protobuf/empty.proto";

package org.starcoin.thor.proto;

message ProtoGameInfo {
    required string addr = 1;
    required string name = 2;
    required string gameHash = 3;
    required uint64 cost = 4;
}

message CreateGameReq {
    required ProtoGameInfo game = 1;
}

message GameListReq {
    required uint32 page = 1;
}

message GameListResp {
    required uint32 total = 1;
    repeated ProtoGameInfo list = 2;
}

message QueryGameReq {
    required string gameHash = 1;
}

message QueryGameResp {
    required bool hasGame = 1;
    optional ProtoGameInfo game = 2;
}

message SuccResp {
    required bool succ = 1;
}

message ProtoAdmin {
    required string addr = 1;
}

service GameService {
    rpc createGame (CreateGameReq) returns (SuccResp);
    rpc gameList (GameListReq) returns (GameListResp);
    rpc queryGame (QueryGameReq) returns (QueryGameResp);
    rpc queryAdmin (google.protobuf.Empty) returns (ProtoAdmin);
}